# BadgeSort

./: .coverage  .gitignore  .release-please-manifest.json  BADGES.md  CHANGELOG.md  Dockerfile  README.md  action.yml  entrypoint.py  entrypoint.sh  index.js  package-lock.json  package.json  pyproject.toml  pytest.ini  release-please-config.json  test_missing_logos.py
.github/: copilot-instructions.md  renovate.json5
.github/renovate/: groups.json5
.github/workflows/: build-and-test.yaml  build-image.yaml  deploy-pages.yml  generate-badges.yaml  pr-badge-comment.yml  publish-action.yaml  release-please.yaml  release.yaml  render-all-badges.yaml
badgesort/: gh_actions_entrypoint.py  hilbert.py  icons.py
docs/: BUILD_SYSTEM.md  README.md  icons_data.json  index.html  index.template.html
generate_badges/: gh_actions_entrypoint.py  icons.py
scripts/: build_microsite.py
src/: icons.py  requirements.in  requirements.txt
tests/: test_badge_hyperlinks.py  test_camo_url_limits.py  test_codeblock_handling.py  test_integration.py
