[tool.poetry]
name = "BadgeSort"
version = "3.3.2"
description = "Generate and sort branded Shields.io badges by color"
authors = ["Chip Wolf <github@chipwolf.uk>"]
license = "MIT"
readme = "README.md"
packages = [{include = "badgesort"}]

[tool.poetry.dependencies]
python = "^3.10"
certifi = "2026.6.17"
chardet = "7.4.3"
idna = "3.18"
poetry-core = "2.4.1"
requests = "2.34.2"
simpleicons = "7.21.0"
urllib3 = "2.7.0"
scour = "^0.38.2"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.0"
pytest-cov = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
